tests/error/protocol_errors_py312/no_protocols_match.err
Error: No given protocols apply (at $FILE:22:11)
   | 
20 | @guppy
21 | def bar_flt[T: (FooNat, FooInt)](t: T, n: float) -> nat:
22 |     return t.foo(n)
   |            ^^^^^^^^ Couldn't find a protocol implementation providing `foo` with
   |                     a valid signature.

Note: Protocol `FooNat` provides method `foo` with signature:  `(T, nat) -> nat`

Note: Protocol `FooInt` provides method `foo` with signature:  `(T, int) -> int`

Guppy compilation failed due to 1 previous error
